Working on index.html

--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -12,7 +12,37 @@
 </head>
 
 <body>
-    
 
+    <div>
+        <!--Navbar-->
+        <nav class="navbar navbar-default">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">UFO Sightings
+                        <img class="ufo-pic" src="static/images/ufo_pic.svg"/>
+                    </a>
+                </div>
+            </div>
+        </nav>
+
+        <!--Title-->
+        <div>
+            <h1>UFO Sightings</h1>
+            <p>Have you seen one?</p>
+        </div>
+
+        <!--Container-->
+        <div class="container">
+            <div class="row">
+                <div class="col-md-">
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="static/js/app.js"></script>
+    <script src="static/js/data.js"></script>
 </body>
 </html>
