--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -25,7 +25,7 @@
             </div>
         </nav>
 
-        <!--Title-->
+        <!--Title Section-->
         <div>
             <h1>UFO Sightings</h1>
             <p>Have you seen one?</p>
@@ -34,15 +34,60 @@
         <!--Container-->
         <div class="container">
             <div class="row">
-                <div class="col-md-">
+                <div class="col-md-2">
+                    <aside class="filters">
+                        <div class="panel panel-default">
+                            <div class="panel-heading">Search</div>
+                            <div class="panel-body">
+                                <form>
+                                    <div class="form-group">
+                                        <ul class="list-group" id="filters">
+                                            <li class="filter list-group-item">
+                                                <label for="date">Enter a Date:</label>
+                                                <input class="form-control" id="datetime" type="text" placeholder="01/01/2021">
+                                            </li>
+                                        </ul>
+                                    </div>
+                                    <button id="filter-button" type="button" class="btn btn-default">Filter Table</button>
+                                </form>
+                            </div>
+                        </div>
+                    </aside>
+                </div>
 
+                <!--Table of Data-->
+                <div class="col-md-10">
+                    <div id="table-area" class="">
+                        <table id="ufo-table" class="table table-striped">
+                        <thead>
+                            <tr>
+                                <th class="table-head">Date</th>
+                                <th class="table-head">City</th>
+                                <th class="table-head">State</th>
+                                <th class="table-head">Country</th>
+                                <th class="table-head">Shape</th>
+                                <th class="table-head">Duration</th>
+                                <th class="table-head">Comments</th>
+                            </tr>
+                        </thead>
+                        <tbody></tbody>
+                        </table>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
 
+        <!--Page Footer-->
+        <footer class="footer">
+            <span class="bottom">UFO Sightings</span>
+        </footer>
+
+    </div>  
+
+    <!--Import JavaScript & d3.js-->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="static/js/app.js"></script>
     <script src="static/js/data.js"></script>
+
 </body>
 </html>
