Working on perfecting code

--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -29,7 +29,7 @@
         <!--Title Section-->
         <div class="hero text-center">
             <h1>UFO Sightings</h1>
-            <p>Have you seen one?</p>
+            <p>Discover where have they been spotted!</p>
         </div>
 
         <!--Container-->
@@ -37,7 +37,7 @@
             <!--Row-->
             <div class="row margin-top-50">
                 <!--Column for Input Form-->
-                <div class="col-md-2">
+                <div class="col-md-2 col-sm-12">
                     <!--Aside with class: filters-->
                     <aside class="filters">
                         <!--Panel-->
@@ -76,7 +76,7 @@
 
                 <!--Table of Data-->
                 <!--Column-->
-                <div class="col-md-10">
+                <div class="col-md-10 col sm-12">
                     <!--Table area-->
                     <div id="table-area">
                         <!--UFO Table-->
