--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -8,7 +8,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-Piv4xVNRyMGpqkS2by6br4gNJ7DXjqk09RmUpJ8jgGtD7zP9yug3goQfGII0yAns" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="static/css/styles.css">
 </head>
@@ -29,13 +28,13 @@
         <!--Title Section-->
         <div class="hero text-center">
             <h1>UFO Sightings</h1>
-            <p>Discover where have they been spotted!</p>
+            <p>Discover where they have been spotted!</p>
         </div>
 
         <!--Container-->
         <div class="container">
             <!--Row-->
-            <div class="row margin-top-50">
+            <div class="row margin-top-75">
                 <!--Column for Input Form-->
                 <div class="col-md-2 col-sm-12">
                     <!--Aside with class: filters-->
@@ -47,7 +46,8 @@
                             <hr/>
                             <!--Panel Body-->
                             <div class="panel-body">
-                                <p>Possible Date Range: 1/1/2010 - 1/13/2010</p>
+                                <h2>Possible Date Range: </h2>
+                                <p>1/1/2010 - 1/13/2010</p>
 
                                 <!--Form-->
                                 <form id="form">
@@ -58,7 +58,9 @@
                                             <!--List-->
                                             <li class="filter list-group-item">
                                                 <!--Label for Form-->
-                                                <label for="date">Date:</label>
+                                                <label for="date">Date:
+                                                    <span></span>
+                                                </label>
                                                 <!--Input: for date-->
                                                 <input class="form-control" id="datetime" type="text" placeholder="1/1/2010">
                                             </li>
@@ -105,7 +107,8 @@
         <!--Page Footer-->
         <footer class="footer">
             <span class="bottom">UFO Sightings</span>
-            <div class="attribution">Icon used above made by <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from 
+            <div class="attribution">Icon used above made by
+                <a href="https://www.flaticon.com/authors/good-ware" title="Good Ware">Good Ware</a> from 
                 <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com.</a>
             </div>
         </footer>
