Duplicated files for UFO level 2

--- a/UFO-level-1/index.html
+++ b/UFO-level-1/index.html
@@ -20,6 +20,7 @@
             <div class="container-fluid">
                 <div class="navbar-header">
                     <a class="navbar-brand" href="index.html">UFO Sightings
+                    <!--UFO svg-->
                     <img class="ufo-pic" src="static/images/ufo.svg"/></a>
                 </div>
             </div>
@@ -31,7 +32,7 @@
             <p>Discover where they have been spotted!</p>
         </div>
 
-        <!--Container-->
+        <!--Page Container-->
         <div class="container">
             <!--Row-->
             <div class="row margin-top-75">
@@ -118,7 +119,7 @@
     
 
 </body>
-<!--Import JavaScript-->
+<!--Import JavaScript & d3-->
 <script src="https://d3js.org/d3.v5.min.js"></script>
 <script src="static/js/data.js"></script>
 <script src="static/js/app.js"></script>
