Working on level 2

--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -78,11 +78,11 @@
                 </div>
                 <div class="col-md-2">
                 <!--City Dropdown-->
-                <div class="btn-group">
+                <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle btn-city" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         City
                     </button>
-                    <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdownMenuButton" id ="city-dropdown">
+                    <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdownMenuButton" id ="cityDropdown">
                     </div>
                 </div>
                 </div>
