Worked on removing duplicates from arrays

--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -79,8 +79,7 @@
                 <div class="col-md-2">
                 <!--City Dropdown-->
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle btn-city" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        City
+                    <button class="btn btn-secondary dropdown-toggle btn-city" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">City
                     </button>
                     <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdownMenuButton" id ="cityDropdown">
                     </div>
@@ -90,8 +89,7 @@
                 <div class="col-md-2">
                 <!--State Dropdown-->
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle btn-state" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        State
+                    <button class="btn btn-secondary dropdown-toggle btn-state" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">State
                     </button>
                     <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdownMenuButton" id="stateDropdown">
                     </div>
@@ -101,8 +99,7 @@
                 <div class="col-md-2">
                 <!--Country Dropdown-->
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle btn-country" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Country
+                    <button class="btn btn-secondary dropdown-toggle btn-country" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Country
                     </button>
                     <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdownMenuButton" id="countryDropdown">
                         
@@ -113,8 +110,7 @@
                 <div class="col-md-2">
                 <!--Shape Dropdown-->
                 <div class="dropdown">
-                    <button class="btn btn-secondary dropdown-toggle btn-shape" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Shape
+                    <button class="btn btn-secondary dropdown-toggle btn-shape" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Shape
                     </button>
                     <div class="dropdown-menu dropdown-menu-lg-right" aria-labelledby="dropdownMenuButton" id="shapeDropdown">
                         
