Got multi-filtering to work

--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -54,6 +54,7 @@
                                 <p id="chosen-option-state"></p>
                                 <p id="chosen-option-country"></p>
                                 <p id="chosen-option-shape"></p>
+                                <p id="num-results"></p>
 
                                 <!--Form-->
                                 <form id="form">
@@ -80,7 +81,7 @@
                             </div>
                         </div>
                     </aside>
-                    
+
                 <!--City Dropdown-->
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle btn-city" type="button" id="dropdownMenuButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">City</button>
