--- a/UFO-level-2/index.html
+++ b/UFO-level-2/index.html
@@ -58,6 +58,7 @@
                                     <p id="chosen-option-state"></p>
                                     <p id="chosen-option-city"></p>
                                     <p id="chosen-option-shape"></p>
+                                    <p id="chosen-option-date"></p>
                                 </div>
                                 <p id="num-results"></p>
                             <!--Country Dropdown-->
